[package]
name = "PeelFuzz"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[features]
default = ["std", "fork"]
std = ["libafl/std", "libafl_bolts/std", "libafl_bolts/serdeany_autoreg"]
fork = ["std", "libafl/fork"]

[dependencies]
libafl = { version = "0.15.4", default-features = false }
libafl_bolts = { version = "0.15.4", default-features = false }
