[package]
name = "PeelFuzz"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[features]
default = ["std"]
std = ["libafl/std", "libafl/fork", "libafl_bolts/std", "libafl_bolts/serdeany_autoreg"]

[dependencies]
libafl = { version = "0.15.4", default-features = false }
libafl_bolts = { version = "0.15.4", default-features = false }
talc = { version = "4.4", default-features = false, features = ["lock_api"] }
spin = { version = "0.9", default-features = false, features = ["lock_api", "mutex", "spin_mutex"] }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
